--- a/public/stylesheets/user/contract.css
+++ b/public/stylesheets/user/contract.css
@@ -1,97 +1,66 @@
-/* contact us styles */
-
-.fa-paper-plane {
-  color: #484848;
+svg {
+    width: 600px;
+    height: auto;
+    --stroke-dash: 46;
+    --stroke-dash-negative: -46;
 }
 
-/* paper plane shake on hover */
-
-.plane-animated {
-  animation-duration: 6s;
-  animation-fill-mode: both;
-  animation-iteration-count: infinite;
-  animation-play-state: paused;
+g#car {
+    transform: translateX(-3px);
+    animation: translate 2s ease-in-out infinite;
 }
 
-.fa-paper-plane:hover {
-  /* Toggle our animation play state to running when we are hovering over our sticker */
-  animation-play-state: running;
+path#shadow {
+    animation: skew 2s ease-in-out infinite;
 }
 
-@keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
-}
-.shake {
-  animation-name: shake;
+g.wheels use {
+    animation: rotate 2s linear infinite;
 }
 
-/* input field styles */
-
-.contact-form {
-  padding: 0 15px 0 15px;
+path.air {
+    animation: offset 2s linear infinite;
+    opacity: 0;
 }
 
-.form-control {
-  border: 2px solid rgba(0, 0, 0, 0.27);
-  width: 100%;
-  max-width: 100%;
-  height: 3em;
-  font-size: 16px;
-  padding: 1em;
-  margin: 0.5em 0 2em 0;
-  font-weight: bold;
+@keyframes translate {
+    50% {
+        transform: translateX(3px);
+    }
+    100% {
+        transform: translateX(-3px);
+    }
 }
 
-textarea {
-  min-height: 10em;
+@keyframes skew {
+    50% {
+        transform: skewX(-20deg);
+    }
 }
 
-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 500;
+@keyframes rotate {
+    50% {
+        transform: rotate(4turn);
+    }
+    100% {
+        transform: rotate(6turn);
+    }
 }
 
-#submit {
-  outline: none;
-  padding: 12px;
-  min-width: 200px;
-  border-radius: 2px;
-  border: 2px solid #ff6363;
-  text-align: center;
-  font-size: 1em;
-  color: #ff6363;
-  background-color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-#submit:hover {
-  background-color: #ff6363;
-  color: white;
-  -webkit-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+@keyframes offset {
+    1% {
+        opacity: 1;
+    }
+    15% {
+        stroke-dashoffset: 0;
+        opacity: 1;
+    }
+    24% {
+        opacity: 1;
+    }
+    25% {
+        opacity: 0;
+    }
+    100% {
+    }
 }
