--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,9 @@
 <header>
     <ul id="nav">
         <li class="slide2"></li>
-        <li class="active"><a href="/" >Alpha</a></li>
-        <li><a href="/users">Beta</a></li>
-        <li><a href="/form">Gamma</a></li>
+        <li class="active"><a href="/" >Introduction</a></li>
+        <li><a href="/users">About Me</a></li>
+        <li><a href="/form">Quiz</a></li>
     </ul>
 </header>
 <!-- end of header area -->
@@ -32,23 +32,23 @@
     </div>
 <h1>Hi, I'm WANG JUNBO!</h1>
   <div class="illustration">
-    <div class="boy"> <img src="images/checo.png" width="180px" /></div>
+    <div class="boy"> <img src="images/checo.png" style="width: 180px"  alt=""/></div>
     <div class="person-type-wrapper">
       <div class="person-type active home-body">
-        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/indoor.svg" height="250"/></div>
-        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/furniture.svg" width="270"/></div>
-        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/playstation.svg" width="65"/></div>
+        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/indoor.svg" height="250" alt=""/></div>
+        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/furniture.svg" width="270" alt=""/></div>
+        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/playstation.svg" width="65" alt=""/></div>
       </div>
       <div class="person-type outdoor-person">
-        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/outdoor.svg" height="250"/></div>
-        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/sky.svg" width="220"/></div>
-        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/dogtree.svg" width="200"/></div>
+        <div class="scenery"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/outdoor.svg" height="250" alt=""/></div>
+        <div class="background-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/sky.svg" width="220" alt=""/></div>
+        <div class="foreground-items"><img src="https://meowlivia.s3.us-east-2.amazonaws.com/codepen/dogtree.svg" width="200" alt=""/></div>
       </div>
     </div>
   </div>
   <div class="option-wrapper">
-    <div class="option active" data-option="home">I'm attached to my home.</div>
-    <div class="option" data-option="outdoor">Hell yeah, I love the outdoors!</div>
+    <div class="option active" data-option="home">I like staying at home.</div>
+    <div class="option" data-option="outdoor">I also enjoy traveling.</div>
   </div>
 </div>
 
