--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,8 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title></title>
-  <title></title>
+  <title>About Me</title>
   <meta name="description" content="">
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
@@ -26,9 +25,9 @@
 <header style="position: fixed; top: 0; z-index: 1000; width: 100%;">
       <ul id="nav" style="opacity: 0.9">
           <li class="slide2"></li>
-          <li><a href="/">Alpha</a></li>
-          <li class="active"><a href="/users">Beta</a></li>
-          <li><a href="/form">Gamma</a></li>
+          <li><a href="/">Introduction</a></li>
+          <li class="active"><a href="/users">About Me</a></li>
+          <li><a href="/form">Quiz</a></li>
       </ul>
 </header>
   <!-- sidebar slider -->
@@ -37,10 +36,10 @@
     <div class="nav-container">
       <div class="nav-links">
         <ul id='myMenu'>
-          <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
-          <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
-          <li data-menuanchor="fourthPage"><a href="#game">GAME</a></li>
-          <li data-menuanchor="fifthPage"><a href="#contact">CONTACT</a></li>
+          <li data-menuanchor="secondPage"><a href="/#about">ABOUT</a></li>
+          <li data-menuanchor="thirdPage"><a href="/#portfolio">PORTFOLIO</a></li>
+          <li data-menuanchor="fourthPage"><a href="/#game">GAME</a></li>
+          <li data-menuanchor="fifthPage"><a href="/#contact">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -77,7 +76,8 @@
         </p>
         </div>
         <div class="col-md-6">
-        <img src="images/checo2022.jpg" style="width: 50%; height: auto;">
+        <img class="wow fadeInDown" data-wow-delay="0.2s"
+             src="images/checo2022.jpg" style="width: 50%; height: auto;" alt="img">
         </div>
         <div class="col-md-12" style="margin-top: 40px">
           <h2 class="wow fadeInDown" data-wow-delay="0.2s" style="color: #06A2CB">CODE SKILLS</h2>
@@ -123,8 +123,9 @@
     <div class="section" data-anchor="projects">
       <div class="content-slide">
         <div class="slide">
+          <div class="projects"><h2 class="wow fadeInDown" data-wow-delay="0.2s">My Project: </h2></div>
           <h1 class="wow fadeInDown" data-wow-delay="0.2s">
-            <a href="https://codepen.io/FRADAR/pen/zYNVjGo">Historical Shadow Scroll(史影绘卷)</a></h1>
+            <a href="">Historical Shadow Scroll(史影绘卷)</a></h1>
           <p class="wow fadeInDown" data-wow-delay="0.2s">
             A project using Stable Diffusion-generated images to create historical pictures</p>
           <div class="col-md-12">
@@ -136,7 +137,8 @@
           </div>
         </div>
         <div class="slide">
-          <h1><a href="https://codepen.io/collection/ANeVpj">AbdOfficeHour</a></h1>
+          <div class="projects"><h2 class="wow fadeInDown" data-wow-delay="0.2s">My Project: </h2></div>
+          <h1><a href="">AbdOfficeHour</a></h1>
           <p>Office Hour Reservation System Development</p>
           <div class="col-md-12">
             <div class="chart-container" id="chart-container-2">
@@ -147,7 +149,8 @@
           </div>
         </div>
         <div class="slide">
-          <h1><a href="https://codepen.io/FRADAR/full/bGgpyEP">ABD_Dictionary</a></h1>
+          <div class="projects"><h2 class="wow fadeInDown" data-wow-delay="0.2s">My Project: </h2></div>
+          <h1><a href="">ABD_Dictionary</a></h1>
           <p>Software engineering course project</p>
           <div class="col-md-12">
             <div class="chart-container" id="chart-container-3">
@@ -163,86 +166,121 @@
 
 
 <div class="section" data-anchor="game">
+  <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="margin-top: 120px;">My Photograph</h1>
   <div class="game-section owl-carousel custom-carousel owl-theme">
-    <div class="item active" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg);">
+    <div class="item active" style="background-image: url(images/photo2.jpg);">
       <div class="item-desc">
-        <h3>Dota 2</h3>
-        <p>Dota 2 is a multiplayer online battle arena by Valve. The game is a sequel to Defense of the
-          Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+        <h3>Location: SUN DE</h3>
       </div>
     </div>
-    <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/winter-3.jpg);">
+    <div class="item" style="background-image: url(images/photo3.jpg);">
       <div class="item-desc">
-        <h3>The Witcher 3</h3>
-        <p>The Witcher 3 is a multiplayer online battle arena by Valve. The game is a sequel to Defense
-          of the Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+        <h3>Location: SCNU</h3>
       </div>
     </div>
-    <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/rdr-2.jpg);">
+    <div class="item" style="background-image: url(images/photo.jpg);">
       <div class="item-desc">
-        <h3>RDR 2</h3>
-        <p>RDR 2 is a multiplayer online battle arena by Valve. The game is a sequel to Defense of the
-          Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+        <h3>Location: CHONG QING</h3>
       </div>
     </div>
-    <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/pubg.jpg);">
+    <div class="item" style="background-image:url(images/photo1.jpg)">
       <div class="item-desc">
-        <h3>PUBG Mobile</h3>
-        <p>PUBG 2 is a multiplayer online battle arena by Valve. The game is a sequel to Defense of the
-          Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+        <h3>Location: SCNU</h3>
       </div>
     </div>
     </div>
   </div>
-</div>
+
 
     <!-- begin section -->
-    <div class="section" data-anchor="contact">
-      <div class="content wow fadeInDown" data-wow-delay="0.2s">
-        <h1>CONTACT ME</h1>
-        <p>Whether you're interested in working with me or just want to say hello, I'd love to hear from you!</p>
-        <br>
-        <div class="contact-form">
+  <div class="section" data-anchor="contact">
+    <div class="content wow fadeInDown" data-wow-delay="0.2s">
+      <h1 style="margin-bottom: 30px">CONTACT ME</h1>
+      <p>Whether you're interested in studying with me or just want to say hello,</p>
+      <p>I'd love to hear from you! Feel free to reach out anytime.</p>
+      <p>You can contact me via email at
+        <strong style="font-family: 'Times New Roman',sans-serif; color: #06A2CB">cr9294wjb@163.com</strong>.
+      </p>
+      <p>Looking forward to connecting with you!</p>
+      <svg viewBox="0 0 178 40" width="178" height="40">
+        <path class="air" d="M 46 16.5 h -20 a 8 8 0 0 1 0 -16" fill="none" stroke="#E85725" stroke-width="1" stroke-linejoin="round" stroke-linecap="round"></path>
+        <g id="car">
+          <svg viewBox="0 0 118 28.125" x="30" y="11.725" width="118" height="28.125">
+            <defs>
+              <circle id="circle" cx="0" cy="0" r="1"></circle>
+              <g id="wheel">
+                <use href="#circle" fill="#1E191A" transform="scale(10)"></use>
+                <use href="#circle" fill="#fff" transform="scale(5)"></use>
+                <path fill="#1E191A" stroke="#1E191A" stroke-width="0.5" stroke-linecap="round" stroke-linejoin="round" opacity="0.2" stroke-dashoffset="0" d="M -3.5 0 a 4 4 0 0 1 7 0 a 3.5 3.5 0 0 0 -7 0"></path>
+                <use href="#circle" fill="#1E191A" transform="scale(1.5)"></use>
+                <path fill="none" stroke="#F9B35C" stroke-width="0.75" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="20 14 8 5" d="M 0 -7.5 a 7.5 7.5 0 0 1 0 15 a 7.5 7.5 0 0 1 0 -15"></path>
+                <path fill="none" stroke="#fff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" opacity="0.1" stroke-dashoffset="0" d="M -6.5 -6.25 a 10 10 0 0 1 13 0 a 9 9 0 0 0 -13 0"></path>
+              </g>
+            </defs>
+            <g transform="translate(51.5 11.125)">
+              <path stroke-width="2" stroke="#1E191A" fill="#EF3F33" d="M 0 0 v -2 a 4.5 4.5 0 0 1 9 0 v 2"></path>
+              <rect fill="#1E191A" x="3.25" y="-3" width="5" height="3"></rect>
+            </g>
+            <g transform="translate(10 24.125)">
+              <g transform="translate(59 0)">
+                <path id="shadow" opacity="0.7" fill="#1E191A" d="M -64 0 l -4 4 h 9 l 8 -1.5 h 100 l -3.5 -2.5"></path>
+              </g>
+              <path fill="#fff" stroke="#1E191A" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round" d="M 0 0 v -10 l 35 -13 v 5 l 4 0.5 l 0.5 4.5 h 35.5 l 30 13"></path>
+              <g fill="#fff" stroke="#1E191A" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M -6 0 v -22 h 10 z"></path>
+                <path d="M 105 0 h -3 l -12 -5.2 v 6.2 h 12"></path>
+              </g>
+              <g fill="#949699" opacity="0.7">
+                <rect x="16" y="-6" width="55" height="6"></rect>
+                <path d="M 24 -14 l 13 -1.85 v 1.85"></path>
+              </g>
+              <g fill="none" stroke="#1E191A" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke-dasharray="30 7 42" d="M 90 0 h -78"></path>
+                <path d="M 39.5 -13 h -15"></path>
+              </g>
+              <path fill="#fff" stroke="#1E191A" stroke-width="2.25" stroke-linejoin="round" d="M 48.125 -6 h -29 v 6 h 29"></path>
+              <rect x="48" y="-7.125" width="6.125" height="7.125" fill="#1E191A"></rect>
+              <g fill="#1E191A">
+                <rect x="60" y="-15" width="1" height="6"></rect>
+                <rect x="56.5" y="-17.5" width="6" height="2.5"></rect>
+              </g>
+            </g>
+            <g class="wheels" transform="translate(0 18.125)">
+              <g transform="translate(10 0)">
+                <use href="#wheel"></use>
+              </g>
+              <g transform="translate(87 0)">
+                <use href="#wheel" stroke-dashoffset="-22"></use>
+              </g>
+            </g>
+          </svg>
+        </g>
+        <g fill="none" stroke-width="1" stroke-linejoin="round" stroke-linecap="round">
+          <path class="air" stroke="#E85725" d="M 177.5 34 h -10 q -16 0 -32 -8"></path>
+          <path class="air" stroke="#949699" d="M 167 28.5 c -18 -2 -22 -8 -37 -10.75"></path>
+          <path class="air" stroke="#949699" d="M 153 20 q -4 -1.7 -8 -3"></path>
+          <path class="air" stroke="#E85725" d="M 117 16.85 c -12 0 -12 16 -24 16 h -8"></path>
+          <path class="air" stroke="#949699" d="M 65 12 q -5 3 -12 3.8"></path>
+          <path class="air" stroke="#949699" stroke-dasharray="9 10" d="M 30 13.5 h -2.5 q -5 0 -5 -5"></path>
+          <path class="air" stroke="#949699" d="M 31 33 h -10"></path>
+          <path class="air" stroke="#949699" d="M 29.5 23 h -12"></path>
+          <path class="air" stroke="#949699" d="M 13.5 23 h -6"></path>
+          <path class="air" stroke="#E85725" d="M 28 28 h -27.5"></path>
+        </g>
+      </svg>
+      <footer>
 
-          <div id="form-messages"></div>
-          <form id="ajax-contact" method="post" role="form" action="contact.php" data-toggle="validator">
-            <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="0.6s">
-              <input type="text" class="form-control" id="name" name="name" placeholder="NAME" data-error="Field can't be blank!" required>
-              <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-              <div class="help-block with-errors"></div>
-            </div>
-
-            <div class="form-group has-feedback wow fadeInRight" data-wow-delay="0.8s">
-              <input type="email" class="form-control" id="email" name="email" placeholder="EMAIL" data-error="Field can't be blank!" required>
-              <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-              <div class="help-block with-errors"></div>
-            </div>
-
-            <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="1s">
-              <textarea data-minlength="10" class="form-control" id="message" name="message" placeholder="MESSAGE" data-error="Minimum of 10 characters" required></textarea>
-              <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-              <div class="help-block with-errors"></div>
-            </div>
-
-            <div class="hidden">
-              <input type="text" class="form-control" id="human" name="human" placeholder="">
-            </div>
-            <div class="wow fadeInUp" data-wow-delay="1s">
-              <button type="submit" id="submit" name="submit" class="btn btn-lg">SEND MESSAGE</button>
-            </div>
-          </form>
-          <br>
-        </div>
-      </div>
+      </footer>
     </div>
+  </div>
+
+
+
+
+
+</div>
     <!-- end section -->
-
   <!-- end fullpage -->
-
-
-
-
-
 
 <!-- partial -->
 <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
@@ -253,7 +291,6 @@
 
 <!--<script src="javascripts/user.js"></script> -->
 <script src="javascripts/script.js"></script>
-<script src="javascripts/user/ajax-form.js"></script>
 <script src="javascripts/user/fullpage.js"></script>
 <script src="javascripts/user/main.js"></script>
 <script src="javascripts/user/nav.js"></script>
@@ -261,6 +298,7 @@
 <script src="javascripts/user/typing.js"></script>
 <script src="javascripts/user/game.js"></script>
 <script src="javascripts/user/language.js"></script>
+<script src="javascripts/contract.js"></script>
 
 </body>
 </html>
