--- a/public/stylesheets/user/user.css
+++ b/public/stylesheets/user/user.css
@@ -178,6 +178,14 @@ p {
 
 
 /* portfolio section */
+.projects h2 {
+  font-size: 40px;
+  text-align: left;
+  margin-bottom: 50px;
+  color: rgba(255, 0, 0, 0.82);
+  margin-left: 20px;
+}
+
 .content {
   margin-left: auto;
   margin-right: auto;
@@ -188,6 +196,13 @@ p {
   margin-left: auto;
   margin-right: auto;
   max-width: 800px;
+}
+
+.content-slide h1 {
+  font-size: 32px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .content-slide img {
