--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mypage</title>
+    <title>Quiz</title>
     <!-- 引入 Bootstrap CSS 文件 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css'>
@@ -18,9 +18,9 @@
 <header>
     <ul id="nav">
         <li class="slide2"></li>
-        <li><a href="/">Alpha</a></li>
-        <li><a href="/users">Beta</a></li>
-        <li class="active"><a href="/form">Gamma</a></li>
+        <li><a href="/">Introduction</a></li>
+        <li><a href="/users">About Me</a></li>
+        <li class="active"><a href="/form">Quiz</a></li>
     </ul>
 </header>
 
@@ -37,7 +37,7 @@
       <div class="countdown"
            style="font-size: 24px; color: #f59ca4; text-align: right;">
           Time left:
-          <span class="countdown-timer">15</span>seconds</div>
+          <span class="countdown-timer"> 15</span> seconds</div>
 
     </div> <!-- END .question -->
     <div class="leaderboard"></div>
