--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,9 @@
 <header>
     <ul id="nav">
         <li class="slide2"></li>
-        <li class="active"><a href="/" >Introduction</a></li>
-        <li><a href="/users">About Me</a></li>
-        <li><a href="/form">Quiz</a></li>
+        <li class="active"><a href="/" >Introduction</a></li> <!--Introduction page (root) -->
+        <li><a href="/users">About Me</a></li>  <!--About Me page -->
+        <li><a href="/form">Quiz</a></li>       <!--Quiz page -->
     </ul>
 </header>
 <!-- end of header area -->
