--- a/views/users.ejs
+++ b/views/users.ejs
@@ -37,8 +37,8 @@
       <div class="nav-links">
         <ul id='myMenu'>
           <li data-menuanchor="secondPage"><a href="/#about">ABOUT</a></li>
-          <li data-menuanchor="thirdPage"><a href="/#portfolio">PORTFOLIO</a></li>
-          <li data-menuanchor="fourthPage"><a href="/#game">GAME</a></li>
+          <li data-menuanchor="thirdPage"><a href="/#projects">PROJECTS</a></li>
+          <li data-menuanchor="fourthPage"><a href="/#photograph">PHOTOGRAPH</a></li>
           <li data-menuanchor="fifthPage"><a href="/#contact">CONTACT</a></li>
         </ul>
       </div>
@@ -202,6 +202,8 @@
         <strong style="font-family: 'Times New Roman',sans-serif; color: #06A2CB">cr9294wjb@163.com</strong>.
       </p>
       <p>Looking forward to connecting with you!</p>
+    </div>
+    <footer class="wow fadeInLeft" data-wow-delay="0.25s" style="margin-top: 50px;" >
       <svg viewBox="0 0 178 40" width="178" height="40">
         <path class="air" d="M 46 16.5 h -20 a 8 8 0 0 1 0 -16" fill="none" stroke="#E85725" stroke-width="1" stroke-linejoin="round" stroke-linecap="round"></path>
         <g id="car">
@@ -268,10 +270,8 @@
           <path class="air" stroke="#E85725" d="M 28 28 h -27.5"></path>
         </g>
       </svg>
-      <footer>
+    </footer>
 
-      </footer>
-    </div>
   </div>
 
 
