--- a/views/users.ejs
+++ b/views/users.ejs
@@ -7,7 +7,6 @@
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'>
@@ -62,7 +61,8 @@
 
     <div class="section" data-anchor="skills">
       <div class="content-skill">
-        <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="margin-bottom:10px; margin-top: 50px;">ABOUT ME</h1>
+        <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="margin-bottom:5px; margin-top: 50px;">ABOUT ME</h1>
+        <div class="row">
         <div class="col-md-6">
           <h2 class="wow fadeInDown" data-wow-delay="0.2s" style="color: #06A2CB">INTRODUCTION</h2>
         <p class="wow fadeInDown" data-wow-delay="0.2s">
@@ -76,10 +76,11 @@
         </p>
         </div>
         <div class="col-md-6">
-        <img class="wow fadeInDown" data-wow-delay="0.2s"
+        <img class="wow fadeInDown img-fluid" data-wow-delay="0.2s"
              src="images/checo2022.jpg" style="width: 50%; height: auto;" alt="img">
         </div>
-        <div class="col-md-12" style="margin-top: 40px">
+        </div>
+        <div class="col-md-12" style="margin-top: 30px">
           <h2 class="wow fadeInDown" data-wow-delay="0.2s" style="color: #06A2CB">CODE SKILLS</h2>
         <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
           <div class="skillbar clearfix " data-percent="60%">
@@ -128,37 +129,43 @@
             <a href="">Historical Shadow Scroll(史影绘卷)</a></h1>
           <p class="wow fadeInDown" data-wow-delay="0.2s">
             A project using Stable Diffusion-generated images to create historical pictures</p>
+        <div class="row">
           <div class="col-md-12">
             <div class="chart-container wow fadeInDown" id="chart-container-1" data-wow-delay="0.2s">
-              <h2 style="text-align: left; margin-bottom: 10px;">Languages</h2>
+              <h3 style="text-align: left; margin-bottom: 10px;">Languages</h3>
               <div class="legend"></div>
               <div class="chart"></div>
             </div>
           </div>
+        </div>
         </div>
         <div class="slide">
           <div class="projects"><h2 class="wow fadeInDown" data-wow-delay="0.2s">My Project: </h2></div>
           <h1><a href="">AbdOfficeHour</a></h1>
           <p>Office Hour Reservation System Development</p>
+        <div class="row">
           <div class="col-md-12">
             <div class="chart-container" id="chart-container-2">
-              <h2 style="text-align: left; margin-bottom: 10px;">Languages</h2>
+              <h3 style="text-align: left; margin-bottom: 10px;">Languages</h3>
               <div class="legend"></div>
               <div class="chart"></div>
             </div>
           </div>
         </div>
+        </div>
         <div class="slide">
           <div class="projects"><h2 class="wow fadeInDown" data-wow-delay="0.2s">My Project: </h2></div>
           <h1><a href="">ABD_Dictionary</a></h1>
           <p>Software engineering course project</p>
+        <div class="row">
           <div class="col-md-12">
             <div class="chart-container" id="chart-container-3">
-              <h2 style="text-align: left; margin-bottom: 10px;">Languages</h2>
+              <h3 style="text-align: left; margin-bottom: 10px;">Languages</h3>
               <div class="legend"></div>
               <div class="chart"></div>
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
@@ -166,7 +173,7 @@
 
 
 <div class="section" data-anchor="game">
-  <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="margin-top: 120px;">My Photograph</h1>
+  <h1 class="wow fadeInDown" data-wow-delay="0.2s" style="margin-top: 90px;">My Photograph</h1>
   <div class="game-section owl-carousel custom-carousel owl-theme">
     <div class="item active" style="background-image: url(images/photo2.jpg);">
       <div class="item-desc">
